package taskPriceInWords.PriceInWords.service;

public interface Case {

   String getPriceDescription (String userInput);

}
