package taskPriceInWords.PriceInWords.service;

public interface PrintPrice {

    void print(String input, String result);

}
