package taskPriceInWords.PriceInWords.wordsRepository;

import java.util.HashMap;

public interface LanguageRepository {

    HashMap<Integer, String> getHashmap();
}
